--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preentrega2</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="sweetalert2.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <h1 id="titulo">Tu carrito esta vacio : </h1>
-    <div class="display">
-        <div id="carrito">
-            <div id="contenedor"></div>
-            <div id="total"></div>
-            <div id="boton"></div>
-        </div>
-        <div id="contenedor-boton"></div>
-        <div id="contenedor-boton2"></div>
-        
-    </div>
+
+    <main id="contenedor"></main>
+    <div id="boton"></div>
+    <div id="total"></div>
+    <div id="contenedor-boton"></div>
+    <!-- <div id="contenedor-boton2"></div>
+         -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="sweetalert2.all.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
