--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
-    <h1 id="titulo">Tu carrito esta vacio : </h1>
-
+    <h1>Nuestra Tienda</h1>
+    <div id="productos"></div>
+    <h1 id="titulo">Nuestra Tienda</h1>
     <main id="contenedor"></main>
     <div id="boton"></div>
     <div id="total"></div>
     <div id="contenedor-boton"></div>
-    <!-- <div id="contenedor-boton2"></div>
-         -->
+   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
