--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
-
 <body>
-    <header class="header" >
+    <header class="header">
         <div>
-            
+
         </div>
         <h1 class="titulo">TecnoShop</h1>
         <div>
             <button type="button" class="btn  " data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="32"
+                    height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                     <path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
                     <path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
                     <path d="M17 17h-11v-14h-2" />
                     <path d="M6 5l14 1l-1 7h-13" />
-                  </svg>
+                </svg>
             </button>
         </div>
     </header>
@@ -51,7 +52,8 @@
                 <div class="modal-footer justify-content-between">
                     <div id="total">Total: </div>
                     <button type="button" class="btn btn-primary" id="btn_pagar">Pagar</button>
-                    <button type="button" id="btn_vaciar" class="btn btn-danger" data-bs-dismiss="modal">Vaciar Carrito</button>
+                    <button type="button" id="btn_vaciar" class="btn btn-danger" data-bs-dismiss="modal">Vaciar
+                        Carrito</button>
                 </div>
             </div>
         </div>
